Enable Java17 preview feature