@@ -3,6 +3,13 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id "com.diffplug.spotless" version "6.7.2"
+	id 'eclipse'
+}
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
+repositories {
+	jcenter()
 }
 
 group = 'tokyo.yabaitech'
@@ -33,4 +40,22 @@ spotless {
 	java {
 		googleJavaFormat('1.15.0').aosp().reflowLongStrings()
 	}
+}
+
+apply plugin: 'java'
+
+compileJava {
+	options.compilerArgs += ["--enable-preview"]
+}
+compileTestJava {
+	options.compilerArgs += ["--enable-preview"]
+}
+
+eclipse.jdt.file.withProperties { props ->
+	props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures']= 'enabled'
+	props['org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures']= 'ignore'
+}
+
+test {
+	jvmArgs '--enable-preview'
 }
